test/typeerrors/Examples/Shadow.hs
f :: String -> String
f id = map id "helium"
